fix nav collapse bugs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -136,6 +136,7 @@ section {
             list-style: none;
             padding: 0;
             margin: 0;
+            display: block !important;
             li {
                 display: inline-block;
                 margin: 0 $gap / 2;
@@ -231,7 +232,10 @@ section {
                 height: auto;
                 padding: $gap / 2 0;
                 box-shadow: 0 20px 30px 0 rgba(0,0,0,0.04);
-                // display: none;
+                display: none !important;
+                &.show {
+                    display: block !important;
+                }
                 li {
                     display: block;
                     margin: 0;
